--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "graphql": "^16.11.0",
     "next": "15.4.4",
     "react": "19.1.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-bootstrap": "^1.0.1",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
