--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "@apollo/client": "^3.13.9",
     "bootstrap": "^5.3.7",
     "graphql": "^16.11.0",
+    "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "next": "15.4.4",
     "react": "19.1.0",
     "react-bootstrap": "^2.10.10",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-leaflet": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-bootstrap": "^1.0.1",
