--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.13.9",
     "bootstrap": "^5.3.7",
     "graphql": "^16.11.0",
+    "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "next": "15.4.4",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/js-cookie": "^3.0.6",
     "@types/leaflet": "^1.9.20",
     "@types/node": "^20",
     "@types/react": "^19",
